--- a/src/components/login.css
+++ b/src/components/login.css
@@ -5,8 +5,8 @@
   }
   .formBox{
     min-width: 100%;
-    height: 35vh;
-    border:dotted blue 2vw;
+    height: 30vh;
+    border:blue 2vw;
     margin: 0vw;
     padding: 5vw;
     position: relative;
